ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # This annotation tells ingress to rewrite the path that is sent to the service
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
    # host: www.example.com
      paths:
      - path: /testpath
        backend:
          serviceName: nginx
          servicePort: 80
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - www.example.com
  #    secretName: example-tls
